src/test/deca/context/valid/thibault/optimisation/testOpt.deca
{
	int a;
	int b;
	float c;

	a=0;
}
