src/test/deca/context/invalid/pierre/objects/badTypeCast.deca
{
    float b = 0.5;
    int a = (int)(b);
}